mType/tests/testFiles/lambda/error/lambdaToUndefinedInterface.mt
// Lambda assigned to undefined interface test

// This should fail - interface doesn't exist
UnknownInterface badLambda = x -> x * 2;